Adds style sheet to frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Euler Exercise</title>
+    <title>Fitness Tracker</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
